# aoc2024

./: .gitignore  .slh-config.json  CMakeLists.txt  README.md  run
day01/: CMakeLists.txt  part1.c  part2.c  prompt.md  solution1.txt  solution2.txt
day02/: CMakeLists.txt  part1.c  part2.c  prompt.md
day03/: CMakeLists.txt  part1.c  part2.c  prompt.md  solution1.txt
day04/: CMakeLists.txt  part1.c  part2.c  prompt.md
day05/: CMakeLists.txt  part1.c  part2.c  prompt.md
day06/: CMakeLists.txt  part1.c  part2.c  prompt.md
slh/: CMakeLists.txt
slh/include/slh/: list.h  mat.h  slh.h
slh/lib/: list.c  slh.c
